adds in google fonts

--- a/02-css-bootstrap/01-Activities/07-CSSTypography/Unsolved/html-template.html
+++ b/02-css-bootstrap/01-Activities/07-CSSTypography/Unsolved/html-template.html
@@ -10,8 +10,8 @@
   <title>Stuff I Think About</title>
 
   <!-- Add a CSS Reference Here! -->
-  <link rel="stylesheet" type="text/css" href="styles.css"
-
+  <link rel="stylesheet" type="text/css" href="styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Almarai|Montserrat|Turret+Road&display=swap" rel="stylesheet">
 </head>
 
 <body>
