--- a/03-javascript/01-Activities/31-MyFirstObject/Unsolved/car-object-unsolved.html
+++ b/03-javascript/01-Activities/31-MyFirstObject/Unsolved/car-object-unsolved.html
@@ -50,16 +50,25 @@
       // How would we log...
 
       // The car's make?
+      console.log(car.make);
 
       // The car's model?
+      console.log(car.model);
 
       // The car's mileage?
+      console.log(car.mileage);
 
       // How would we run the car's driveToWork method?
+      car.driveToWork();
+      console.log(car.mileage);
 
       // How would we run the car's driveAroundWorld method?
+      car.driveAroundWorld();
+      console.log(car.mileage);
 
       // How would we run the getTuneUp method?
+      car.getTuneUp();
+      car.honk();
 
     </script>
     
